* The platform-specific `TTYPort`/`BreakDuration` and `COMPort` are now at the root level rather
  than under the `posix` and `windows` submodules respectively.
* Opening `SerialPort` s now uses a the builder pattern through `serialport::new()`. See the
  README for concrete examples.
* `SerialPorts`s are no longer opened with a default timeout of 1ms

==== Fixed
==== Removed
* Removed the `serialport::prelude` module. Types should be explicitly imported
  or can be glob-imported from the root like `use serialport::*`.

=== [3.3.0] - 2019-06-12
==== Added
* Added support for arbitrary baud rates on Mac OS X and iOS

==== Changed
* Minimum supported Rust version is now 1.31 to support using the 2018 edition of Rust.

==== Fixed
* Upgraded `sparc64-unknown-linux-gnu` to Tier 2 support

==== Removed

=== [3.2.0] - 2019-01-01
==== Added
* Port enumeration is now supported on FreeBSD.

==== Changed
* Minimum supported Rust version changed to 1.24.1
* Made `aarch64-unknown-linux-musl` a Tier-2 supported target

==== Fixed
* Fixed software flow control for POSIX systems ([!54](https://gitlab.com/susurrus/serialport-rs/merge_requests/54))

==== Removed
* Removed support for `x86_64-unknown-linux-gnux32`.

=== [3.1.0] - 2018-11-02
==== Added
* Added `bytes_to_read()`, `bytes_to_write()`, and `clear()` to `SerialPort`.
  Also added example scripts for using them.
* Added Tier 2 support for:
  * `armv5te-unknown-linux-musleabi`
* Added "libudev" feature to allow for disabling linking to `libudev` on Linux.

=== [3.0.0] - 2018-07-14
==== Added
* Arbitrary baud rates are now supported on BSDs, Linux, and Windows.
* Added Tier 1 support for `{i586|i686|x86_64}-unknown-linux-musl`
* Added Tier 2 support for:
  * `{arm|armv7}-linux-androideabi`
  * `i686-linux-android`
  * `{i686|x86_64}-unknown-freebsd`
  * `arm-unknown-linux-musleabi`
  * `armv7-unknown-linux-musleabihf`
  * `{mips64|mips64el}-unknown-linux-gnuabi64`
  * `armv5te-unknown-linux-gnueabi`